--- a/templates/index.html
+++ b/templates/index.html
@@ -73,15 +73,15 @@
                 
                 
                 <li>
-                    <a class=" " href="##">
-                        <span class="icon profile" aria-hidden="true"></span>My Profile
+                    <a class=" " href="/empreg">
+                        <span class="icon profile" aria-hidden="true"></span>Employee
                     </a>
                 </li>
                 <li>
                     <a href="##"><span class="icon setting" aria-hidden="true"></span>Settings</a>
                 </li>
                 <li>
-                  <a href="appearance.html"><span class="icon log-out" aria-hidden="true"></span>Log-out</a>
+                  <a href="{% url 'logout' %}"><span class="icon log-out" aria-hidden="true"></span>Log-out</a>
                 </li>
             </ul>
         </div>
