--- a/templates/addworker.html
+++ b/templates/addworker.html
@@ -17,9 +17,9 @@
     <div class="layer"></div>
     <main class="page-center">
         <article class="sign-up">
-            <h1 class="sign-up__title">Add New Worker</h1>
-            <p class="sign-up__subtitle">No work is insignificant. All labour that uplifts humanity has dignity and importance and should be undertaken with painstaking excellence.</p>
-            <form class="sign-up-form form" action="" method="">
+            <h1 class="sign-up__title">Add New Worker</h1>            
+            <form class="sign-up-form form" action="POST" method="">
+                {% csrf_token %}
                 <label class="form-label-wrapper">
                     <p class="form-label">Worker Name</p>
                     <input class="form-input" type="text" placeholder="Enter Worker's name" required>
