--- a/templates/emplog.html
+++ b/templates/emplog.html
@@ -19,21 +19,22 @@
     <article class="sign-up">
       <h1 class="sign-up__title">Welcome back!</h1>
       <p class="sign-up__subtitle">Sign in to your account to continue</p>
-      <form class="sign-up-form form" action="" method="">
+      <form  method="POST" action="" >
+        {% csrf_token %}
         <label class="form-label-wrapper">
-          <p class="form-label">Contact No.</p>
-          <input class="form-input" type="tel" placeholder="Enter your contact no." pattern="[0-9]{10}" required>
+          <p class="form-label">Username</p>
+          <input class="form-control" name="username" type="text" placeholder="Enter your username." >
         </label>
         <label class="form-label-wrapper">
           <p class="form-label">Password</p>
-          <input class="form-input" type="password" placeholder="Enter your password" required>
+          <input class="form-control" name = "password"  type="password" placeholder="Enter your password" required>
         </label>
-        <a class="link-info forget-link" href="##">Forgot your password?</a>
-        <label class="form-checkbox-wrapper">
+        <!-- <a class="link-info forget-link" href="##">Forgot your password?</a> -->
+        <!-- <label class="form-checkbox-wrapper">
           <input class="form-checkbox" type="checkbox" required>
           <span class="form-checkbox-label">Remember me next time</span>
-        </label>
-        <button class="form-btn primary-default-btn transparent-btn">Sign in</button>
+        </label> -->
+        <input type="submit" name="emplog">
       </form>
     </article>
   </main>
