--- a/templates/workers.html
+++ b/templates/workers.html
@@ -141,9 +141,13 @@
       <div class="container">
         <article class="white-block">
             <div class="search-wrapper">
-                <i data-feather="search" aria-hidden="true"></i>
-                <input type="text" placeholder="Enter keywords ..." required>
-            </div>
+              <form method="get">
+                {{mfil.form.name}}
+                <!-- <i data-feather="search" aria-hidden="true"></i> -->
+                <!-- <input type="text" placeholder="Enter keywords ..." required > -->
+                <button class="btn btn-primary" type ="submit">search</button>
+                </form>
+            <!-- </div> -->
         </article>
         
         <div class="row stat-cards-workers">
