--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
     <div class="sidebar-footer">
         <a href="##" class="sidebar-user">
             <span class="sidebar-user-img">
-                <picture><source srcset="{% static 'img/avatar/avatar-illustrated-01.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-illustrated-01.png' %}" alt="User name"></picture>
+                <picture><source srcset="" type="image/webp"><img src="" alt=""></picture>
             </span>
             <div class="sidebar-user-info">
                 <span class="sidebar-user__title">WMS.</span>
