--- a/templates/paysalary.html
+++ b/templates/paysalary.html
@@ -81,7 +81,7 @@
                     <a href="##"><span class="icon setting" aria-hidden="true"></span>Settings</a>
                 </li>
                 <li>
-                  <a href="appearance.html"><span class="icon log-out" aria-hidden="true"></span>Log-out</a>
+                  <a href="{% url 'logout' %}"><span class="icon log-out" aria-hidden="true"></span>Log-out</a>
                 </li>
             </ul>
         </div>
