--- a/templates/addsite.html
+++ b/templates/addsite.html
@@ -17,38 +17,40 @@
     <div class="layer"></div>
     <main class="page-center">
         <article class="sign-up">
-            <h1 class="sign-up__title">Add New Construction Site</h1>
-            <p class="sign-up__subtitle">No work is insignificant. All labour that uplifts humanity has dignity and importance and should be undertaken with painstaking excellence.</p>
-            <form class="sign-up-form form" action="" method="">
+            <h1 class="sign-up__title">Add New Construction Site</h1>            
+            <form class="sign-up-form form" action="" method="POST">
+                {% csrf_token %}
                 <label class="form-label-wrapper">
                     <p class="form-label">Site Name</p>
-                    <input class="form-input" type="text" placeholder="Enter Construction Site name" required>
+                    {{form.sname}}
 
                 </label>
-                </label>
+                
                 <label class="form-label-wrapper">
                     <p class="form-label">Site Address</p>
-                    <input class="form-input" type="text" placeholder="Enter Construction Site Address" required>
+                    {{form.location}}
 
                 </label>
                 <label class="form-label-wrapper">
                     <p class="form-label">Site Contact no.</p>
-                    <input class="form-input" type="tel" placeholder="Enter Construction Site Contact no." pattern="[0-9]{10}" required>
+                   {{form.contact}}
                 </label>
                 
                 <label class="form-label-wrapper">
                     <p class="form-label">Site Status</p>
-                    <input class="form-input" list="worker_type" type="text" placeholder="Enter Construction Site Status"
+                    {{form.status}}
+                    
+                    <!-- <input class="form-input" list="worker_type" type="text" placeholder="Enter Construction Site Status"
                         required>
                     <datalist id="worker_type">
                         <option value="Active">
                         <option value="Completed">
-                        <option value="On Hold">
+                        <option value="On Hold"> -->
                     </datalist>
 
                 
                 <br/>
-                <button class="form-btn primary-default-btn transparent-btn">Add Worker</button>
+                <input type="submit" name="add site">
             </form>
         </article>
     </main>
