--- a/templates/site_profile.html
+++ b/templates/site_profile.html
@@ -73,9 +73,9 @@
                 
                 
                 <li>
-                    <a class=" " href="##">
-                        <span class="icon profile" aria-hidden="true"></span>My Profile
-                    </a>
+                  <a class=" " href="/empreg">
+                    <span class="icon profile" aria-hidden="true"></span>Employee
+                </a>
                 </li>
                 <li>
                     <a href="##"><span class="icon setting" aria-hidden="true"></span>Settings</a>
