construction and worker add button html

--- a/templates/construction.html
+++ b/templates/construction.html
@@ -139,21 +139,29 @@
     <!-- ! Main -->
     <main class="main users chart-page" id="skip-target">
       <div class="container">
-        <article class="white-block">
-            <div class="search-wrapper">
-              <form method="get">
-                {{mfil.form.sname}}
-                <!-- <i data-feather="search" aria-hidden="true"></i> -->
-                <!-- <input type="text" placeholder="Enter keywords ..." required > -->
-                <button class="btn btn-primary" type ="submit">search</button>
-                <br>
-                
+        <div class="row">
+          <div class="col-lg-9">
+            <article class="white-block">
+              <div class="search-wrapper">
+                <form method="get">
+                  {{mfil.form.sname}}
+                  <i data-feather="search" aria-hidden="true"></i>
+                  <!-- <input type="text" placeholder="Enter keywords ..." required > -->
                 </form>
-                
-            <!-- </div> -->
-        </article>
-        <button class="button button1"><a href ='{% url 'add_site' %}'>Add Sites</a></button>
-       
+              </div>
+
+            </article>
+          </div>
+          <div class="col-lg-3">
+            <a href='{% url 'add_site' %}'>
+              <article class="white-block">
+                <button class="btn primary-default-btn transparent-btn">Add Site</button>
+              </article>
+            </a>
+          </div>
+
+        </div>
+
         <div class="row stat-cards-workers">         
 
           {% for i in site%}
