--- a/templates/addworker.html
+++ b/templates/addworker.html
@@ -28,8 +28,8 @@
                 </label>
                 <label class="form-label-wrapper">
                     <p class="form-label">Worker Type</p>
-                    {{form.category}}
-                    <!-- <input class="form-input" list="worker_type" type="text" placeholder="Enter Worker's Type"
+                    
+                    <input class="form-input" list="worker_type" type="text" placeholder="Enter Worker's Type"
                         required>
                     <datalist id="worker_type">
                         <option value="Carpenter">
@@ -43,7 +43,7 @@
                         <option value="Concrete Finisher">
                         <option value="Painter">
                         <option value="Other">
-                    </datalist> -->
+                    </datalist>
                 </label>
                 <label class="form-label-wrapper">
                     <p class="form-label">Worker Address</p>
